<resources>
    <string name="app_name">DriveNext</string>
    <string name="income">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="logo">Logo</string>
    <string name="next">Далее</string>
    <string name="helpFind">Поможем найти твою следующую поездку</string>
    <string name="grats">Вы успешно зарегистрировались.\nОбработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="gratsShort">Поздравляем</string>
    <string name="email">Электронная почта</string>
    <string name="typeEmail">Введите электронную почту</string>
    <string name="password">Пароль</string>
    <string name="typePassword">Введите пароль</string>
    <string name="incomeAccount">Войдите в аккаунт</string>
    <string name="typeYourData">Пожалуйста, введите свои данные</string>
    <string name="wrongEmail">Неверный email</string>
    <string name="wrongPassword">Пароль должен быть не менее 6 символов</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="incomeGoogle">Войти через Google</string>
    <string name="hidePassword">Show/Hide Password</string>
    <string name="skip">Пропустить</string>
    <string name="carRent">Аренда автомобилей</string>
    <string name="onboarding1">Открой для себя удобный и доступный способ передвижения</string>
    <string name="onboarding2">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="safeAndSecure">Безопасно и удобно</string>
    <string name="bestOffers">Лучшие предложения</string>
    <string name="go">Поехали</string>
    <string name="onboarding3">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="accept">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="repeatPass">Повторите пароль</string>
    <string name="noEqualPass">Пароли не совпадают</string>
    <string name="mustAccept">Вы должны согласиться с условиями</string>
    <string name="thinkPass">Придумайте пароль</string>
    <string name="mustBe">Поле не может быть пустым</string>
    <string name="selectGender">Выберите пол</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="mustFillDate">Поле даты рождения не может быть пустым</string>
    <string name="surname">Фамилия</string>
    <string name="putSurname">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="putName">Введите имя</string>
    <string name="fatherName">Отчество</string>
    <string name="putFatherName">Введите отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="putBirthday">Введите дату рождения</string>
    <string name="photoHelpText">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="zeros">0000000000</string>
    <string name="putDate">Введите дату выдачи</string>
    <string name="wrongDate">Дата не может быть из будущего</string>
    <string name="wrongNumber">Неверный номер (должен быть из 10 цифр)</string>
    <string name="loadPassport">Загрузите паспорт</string>
    <string name="loadVY">Загрузите ВУ</string>
    <string name="loadPhoto">Загрузить фото</string>
    <string name="loadVYError">Загрузите фото водительского удостоверения</string>
    <string name="loadPassportError">Загрузите фото паспорта</string>
    <string name="date">Дата выдачи</string>
    <string name="VYNumber">Номер водительского удостоверения</string>
    <string name="noConnect">Нет подключения к интернету</string>
    <string name="checkConnect">Проверьте подключение и повторите попытку</string>
    <string name="retryConnect">Повторить попытку</string>
    <string name="ageError">Вы должны быть старше 18 лет</string>
</resources>