<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".registration.FirstRegistrationActivity">
    <ImageButton
        android:id="@+id/chevron_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hidePassword"
        android:src="@drawable/chevron"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/createAccount"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@id/chevron_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/surname"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/putSurname"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/last_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="220dp"
        android:layout_weight="1"
        android:background="@drawable/button_dark_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/putName"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/first_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/middle_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/fatherName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name" />

    <EditText
        android:id="@+id/middle_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/putFatherName"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/middle_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/birthday"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintTop_toBottomOf="@id/middle_name" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/putBirthday"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/dob_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <ImageButton
        android:id="@+id/date_button"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="368dp"
        android:background="@android:color/transparent"
        android:src="@drawable/date_icon"
        app:layout_constraintStart_toStartOf="@+id/dob"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/gender"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="524dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/male"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/gender_label"
            android:buttonTint="@color/dark_purple"
            tools:layout_editor_absoluteX="3dp" />

        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:buttonTint="@color/dark_purple"
            android:text="@string/female"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/male_radio_button"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

    </RadioGroup>

    <TextView
        android:id="@+id/dob_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mustFillDate"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/dob"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/last_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mustBe"
        android:textColor="@color/red"
        android:layout_marginBottom="15dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/first_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/mustBe"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/middle_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/mustBe"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/middle_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/selectGender"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
