<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".registration.FirstRegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="start"
        android:text="@string/thinkPass"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:background="@drawable/edit_text_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/typePassword"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/eye_button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="212dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hidePassword"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="start"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="start"
        android:text="@string/repeatPass"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/confirm_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noEqualPass"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/agree_checkbox_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mustAccept"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/agree_checkbox"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/edit_text_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/typeEmail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <CheckBox
        android:id="@+id/agree_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:buttonTint="#2A1246"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="324dp"
        android:layout_weight="1"
        android:background="@drawable/button_dark_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/agree_checkbox"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/createAccount"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@id/chevron_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/chevron_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hidePassword"
        android:src="@drawable/chevron"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrongEmail"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrongPassword"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/password2"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:background="@drawable/edit_text_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/typePassword"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="15dp" />

    <ImageButton
        android:id="@+id/eye_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="304dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hidePassword"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>
