<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="80dp"
    android:paddingEnd="24dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0"
        android:lineHeight="29sp"
        android:textColor="@color/purple_700"
        android:gravity="start"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpFind"
        android:textSize="14sp"
        android:letterSpacing="0"
        android:lineHeight="17sp"
        android:textColor="@color/gray"
        android:layout_marginTop="4dp"
        android:gravity="start"/>

    <ImageView
        android:id="@+id/splashImage"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@drawable/splash_image" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="14dp"/>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="14dp"/>

</LinearLayout>
